# iicp-client-python

./: CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: anthropic_node.py  consumer.py  node.py
src/iicp_client/: __init__.py  _http.py  availability.py  cip_policy.py  cli.py  client.py  concurrency.py  conformance.py  errors.py  idempotency.py  identity.py  iicp_tcp.py  instance_lock.py  nat_detection.py  node.py  node_log.py  operator_crypto.py  otel_tracer.py  peer_manager.py  pricing.py  qualify.py  relay_session.py  relay_worker_client.py  scheduler.py  token_validator.py  trust_auditor.py  tunnel.py  types.py  updater.py
src/iicp_client/backends/: __init__.py  anthropic.py  base.py  llamacpp.py  openai_compat.py  vllm.py
src/iicp_client/proxy/: main.py
tests/: test_availability.py  test_backends.py  test_capabilities.py  test_cip_policy.py  test_cli_ux.py  test_client.py  test_concurrency.py  test_conformance.py  test_consumer_token_client.py  test_credits_cli.py  test_current_node_token.py  test_iicp_tcp.py  test_instance_lock.py  test_integration.py  test_mcp_gateway.py  test_nat_detection.py  test_node_log.py  test_operator_crypto.py  test_operator_identity.py  test_peer_manager.py  test_policy_trio.py  test_pricing.py  test_relay_http_poll.py  test_relay_session.py  test_relay_worker_client.py  test_scheduler.py  test_serve.py  test_serve_address_family.py  test_serve_multiplex.py  test_task_rate_limit.py  test_tunnel.py  test_updater.py
