[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iicp-client"
version = "0.3.2"
description = "Official Python client SDK for the IICP protocol"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [
    {name = "IICP Contributors", email = "claude@roblemumin.com"},
]
keywords = ["iicp", "ai-agents", "protocol", "sdk", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://iicp.network"
Repository = "https://github.com/RobLe3/iicp-client-python"
Documentation = "https://iicp.network/docs"
"Bug Tracker" = "https://github.com/RobLe3/iicp-client-python/issues"

[project.optional-dependencies]
metrics = [
    "prometheus-client>=0.20",
]
# Native IICP binary transport (port 9484, spec/iicp-framing.md). Optional
# because cbor2 has a C-extension build that can fail on some musl-based
# minimal containers — HTTP-only nodes don't need it.
iicp-tcp = [
    "cbor2>=5.4",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "ruff>=0.8",
    "prometheus-client>=0.20",
    "cbor2>=5.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/iicp_client"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
