[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iicp-client"
version = "0.7.48"
description = "Official Python client SDK for the IICP protocol"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [
    {name = "IICP Contributors"},
]
keywords = ["iicp", "ai-agents", "protocol", "sdk", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.27",
    # identity.py imports Ed25519PrivateKey unconditionally on the operator
    # identity path that `iicp-node init` always exercises — core, not optional.
    "cryptography>=42",
]

[project.scripts]
# `pip install iicp-client` now ships an `iicp-node` console entry point.
# Replaces the hand-written sdk_node.py boilerplate operators used to copy.
iicp-node = "iicp_client.cli:main"

[project.urls]
Homepage = "https://iicp.network"
Repository = "https://github.com/RobLe3/iicp-client-python"
Documentation = "https://iicp.network/docs"
"Bug Tracker" = "https://github.com/RobLe3/iicp-client-python/issues"

[project.optional-dependencies]
metrics = [
    "prometheus-client>=0.20",
]
# Native IICP binary transport (port 9484, spec/iicp-framing.md). Optional
# because cbor2 has a C-extension build that can fail on some musl-based
# minimal containers — HTTP-only nodes don't need it.
iicp-tcp = [
    "cbor2>=5.4",
]
# ADR-041 UPnP NAT detection — auto-discover public endpoint on operator
# networks behind a UPnP-capable router. Optional because upnpclient pulls in
# lxml (C extension), which fails to build on some minimal containers.
nat = [
    "upnpclient>=1.0",
    "ifaddr>=0.2",
]
# IICP-CX S.16: E2E payload confidentiality (X25519-HKDF-SHA256 + AES-256-GCM)
cx = [
    "cryptography>=42",
]
# ADR-050 unified client — the local OpenAI/Ollama/Anthropic-compat proxy gateway
# (`iicp-node proxy`). Optional because it pulls FastAPI/uvicorn; plain library /
# consumer use (IicpClient) and `iicp-node serve`/`query` do NOT need it. The
# proxy subcommand lazy-imports these and errors clearly if the extra is absent.
proxy = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "prometheus-client>=0.21",
    "cryptography>=42",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-timeout>=2.3",
    "respx>=0.21",
    "ruff>=0.8",
    "prometheus-client>=0.20",
    "cbor2>=5.4",
    "cryptography>=42",
    # ADR-050 proxy gateway — needed to exercise the moved iicp_client.proxy tests
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["src/iicp_client"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Hard per-test timeout so a hung test fails fast in CI with a specific
# traceback instead of consuming the whole runner. Locally the full suite
# runs in <3s; 30s is generous for the slowest fixture (HTTP server boot
# + shutdown).
timeout = 30
timeout_method = "thread"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
